# context-logger

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yaml
examples/: contexted_log_async.rs  contexted_log_sync.rs  current_context.rs  log_async.rs  log_sync.rs
src/: context.rs  context_properties.rs  context_stack.rs  future.rs  guard.rs  lib.rs  properties.rs  record.rs  records.rs  scope.rs  stack.rs  value.rs
src/scope/: mod.rs  stack.rs
tests/: default_records.rs  records.rs  scoped_records.rs  shadowing.rs  smoke.rs
tests/common/: mod.rs
