[package]
name = "context-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
erased-serde = "0.4.6"
include-utils = "0.2.4"
log = { version = "0.4.27", features = ["kv_serde"] }
pin-project = "1"
serde = "1"

[dev-dependencies]
env_logger = { version = "0.11", features = ["kv"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "time"] }

[lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"
