[package]
name = "context-logger"
description = "A lightweight, ergonomic library for adding structured context to your logs"
categories = ["development-tools::debugging", "asynchronous"]
keywords = ["log", "logging", "context-logging", "structured-logging"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/crate/context-logger"
repository = "https://github.com/alekseysidorov/context-logger"

version = "0.1.2"
edition = "2024"
rust-version = "1.85"

[dependencies]
erased-serde = "0.4.6"
include-utils = "0.2.4"
log = { version = "0.4.27", features = ["kv_serde"] }
pin-project = "1"
serde = "1"

[dev-dependencies]
env_logger = { version = "0.11", features = ["kv"] }
futures-util = "0.3"
pretty_assertions = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
structured-logger = { version = "1.0" }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "time"] }

[lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[lints.clippy]
missing_errors_doc = "warn"
missing_panics_doc = "warn"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rustdoc]
broken_intra_doc_links = "deny"
